# moving-objects

./: .gitignore  CMakeLists.txt  COMPARE.cbp  PROJECT.cbp  README.md  classificator.cpp  classificator.hpp  comparator.cpp  comparator.hpp  compare.cpp  moving_objects_identificator.cpp  moving_objects_identificator.hpp  project.cpp
