cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(COMPARE)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(compare compare.cpp comparator.cpp)
target_link_libraries(compare ${PCL_LIBRARIES})
