cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(PROJECT)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(project project.cpp moving_objects_identificator.cpp)
target_link_libraries(project ${PCL_LIBRARIES})
